--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 			</div>
 			<div class="w3ls_logo_products_left1">
 				<ul class="phone_email">
-					<li><i class="fa fa-phone" aria-hidden="true"></i>(+0123) 234 567</li>
-					<li><i class="fa fa-envelope-o" aria-hidden="true"></i><a href="mailto:store@grocery.com">store@grocery.com</a></li>
+					<li><i class="fa fa-phone" aria-hidden="true"></i><strong><a href="tel:9548211306">Call us</a></strong></li>
+					<li><i class="fa fa-envelope-o" aria-hidden="true"></i><a href="mailto:jordan@savdhaan.com"><strong>Ping Us</strong></a></li>
 				</ul>
 			</div>
 			<div class="clearfix"> </div>
@@ -245,7 +245,7 @@
 					<div class="wthree_banner_bottom_left_grid">
 						<img src="images/6.jpg" alt=" " class="img-responsive" />
 						<div class="wthree_banner_btm_pos1">
-							<h3>Save <span>Upto</span> $10</h3>
+							<h3>Save <span>Upto</span> ₹499</h3>
 						</div>
 					</div>
 				</div>
@@ -268,7 +268,7 @@
 										<div class="snipcart-thumb">
 											<a href="single.html"><img title=" " alt=" " src="images/1.png" /></a>		
 											<p>fortune sunflower oil</p>
-											<h4>$7.99 <span>$10.00</span></h4>
+											<h4>₹300 <span>₹450</span></h4>
 										</div>
 										<div class="snipcart-details top_brand_home_details">
 											<form action="checkout.html" method="post">
@@ -277,9 +277,9 @@
 													<input type="hidden" name="add" value="1" />
 													<input type="hidden" name="business" value=" " />
 													<input type="hidden" name="item_name" value="Fortune Sunflower Oil" />
-													<input type="hidden" name="amount" value="7.99" />
+													<input type="hidden" name="amount" value="300" />
 													<input type="hidden" name="discount_amount" value="1.00" />
-													<input type="hidden" name="currency_code" value="USD" />
+													<input type="hidden" name="currency_code" value="INR" />
 													<input type="hidden" name="return" value=" " />
 													<input type="hidden" name="cancel_return" value=" " />
 													<input type="submit" name="submit" value="Add to cart" class="button" />
@@ -303,7 +303,7 @@
 										<div class="snipcart-thumb">
 											<a href="single.html"><img title=" " alt=" " src="images/3.png" /></a>		
 											<p>basmati rise (5 Kg)</p>
-											<h4>$11.99 <span>$15.00</span></h4>
+											<h4>₹500 <span>₹600</span></h4>
 										</div>
 										<div class="snipcart-details top_brand_home_details">
 											<form action="#" method="post">
@@ -312,9 +312,9 @@
 													<input type="hidden" name="add" value="1" />
 													<input type="hidden" name="business" value=" " />
 													<input type="hidden" name="item_name" value="basmati rise" />
-													<input type="hidden" name="amount" value="11.99" />
+													<input type="hidden" name="amount" value="500" />
 													<input type="hidden" name="discount_amount" value="1.00" />
-													<input type="hidden" name="currency_code" value="USD" />
+													<input type="hidden" name="currency_code" value="INR" />
 													<input type="hidden" name="return" value=" " />
 													<input type="hidden" name="cancel_return" value=" " />
 													<input type="submit" name="submit" value="Add to cart" class="button" />
@@ -339,7 +339,7 @@
 										<div class="snipcart-thumb">
 											<a href="single.html"><img src="images/2.png" alt=" " class="img-responsive" /></a>
 											<p>Pepsi soft drink (2 Ltr)</p>
-											<h4>$8.00 <span>$10.00</span></h4>
+											<h4>₹69 <span>₹89</span></h4>
 										</div>
 										<div class="snipcart-details top_brand_home_details">
 											<form action="#" method="post">
@@ -348,9 +348,9 @@
 													<input type="hidden" name="add" value="1" />
 													<input type="hidden" name="business" value=" " />
 													<input type="hidden" name="item_name" value="Pepsi soft drink" />
-													<input type="hidden" name="amount" value="8.00" />
+													<input type="hidden" name="amount" value="69" />
 													<input type="hidden" name="discount_amount" value="1.00" />
-													<input type="hidden" name="currency_code" value="USD" />
+													<input type="hidden" name="currency_code" value="INR" />
 													<input type="hidden" name="return" value=" " />
 													<input type="hidden" name="cancel_return" value=" " />
 													<input type="submit" name="submit" value="Add to cart" class="button" />
@@ -375,7 +375,7 @@
 										<div class="snipcart-thumb">
 											<a href="single.html"><img src="images/4.png" alt=" " class="img-responsive" /></a>
 											<p>dogs food (4 Kg)</p>
-											<h4>$9.00 <span>$11.00</span></h4>
+											<h4>₹300 <span>₹450</span></h4>
 										</div>
 										<div class="snipcart-details top_brand_home_details">
 											<form action="#" method="post">
@@ -384,9 +384,9 @@
 													<input type="hidden" name="add" value="1" />
 													<input type="hidden" name="business" value=" " />
 													<input type="hidden" name="item_name" value="dogs food" />
-													<input type="hidden" name="amount" value="9.00" />
+													<input type="hidden" name="amount" value="300" />
 													<input type="hidden" name="discount_amount" value="1.00" />
-													<input type="hidden" name="currency_code" value="USD" />
+													<input type="hidden" name="currency_code" value="INR" />
 													<input type="hidden" name="return" value=" " />
 													<input type="hidden" name="cancel_return" value=" " />
 													<input type="submit" name="submit" value="Add to cart" class="button" />
@@ -460,7 +460,7 @@
 					<div class="clearfix"> </div>
 					<div class="agileinfo_move_text">
 						<div class="agileinfo_marquee">
-							<h4>get <span class="blink_me">25% off</span> on first order and also get gift voucher</h4>
+							<h4>get <span class="blink_me">25% off</span> on first order using code "LobbyisGreat"</h4>
 						</div>
 						<div class="agileinfo_breaking_news">
 							<span> </span>
@@ -493,25 +493,15 @@
 	<div class="footer">
 		<div class="container">
 			<div class="col-md-3 w3_footer_grid">
-				<h3>information</h3>
+				<h3>Information</h3>
 				<ul class="w3_footer_grid_list">
-					<li><a href="events.html">Events</a></li>
 					<li><a href="about.html">About Us</a></li>
 					<li><a href="products.html">Best Deals</a></li>
 					<li><a href="services.html">Services</a></li>
-					<li><a href="short-codes.html">Short Codes</a></li>
 				</ul>
 			</div>
 			<div class="col-md-3 w3_footer_grid">
-				<h3>policy info</h3>
-				<ul class="w3_footer_grid_list">
-					<li><a href="faqs.html">FAQ</a></li>
-					<li><a href="privacy.html">privacy policy</a></li>
-					<li><a href="privacy.html">terms of use</a></li>
-				</ul>
-			</div>
-			<div class="col-md-3 w3_footer_grid">
-				<h3>what in stores</h3>
+				<h3>Savdhaan is fulfilled</h3>
 				<ul class="w3_footer_grid_list">
 					<li><a href="pet.html">Pet Food</a></li>
 					<li><a href="frozen.html">Frozen Snacks</a></li>
@@ -520,41 +510,31 @@
 					<li><a href="household.html">Households</a></li>
 				</ul>
 			</div>
-			<div class="col-md-3 w3_footer_grid">
-				<h3>twitter posts</h3>
-				<ul class="w3_footer_grid_list1">
-					<li><label class="fa fa-twitter" aria-hidden="true"></label><i>01 day ago</i><span>Non numquam <a href="#">http://sd.ds/13jklf#</a>
-						eius modi tempora incidunt ut labore et
-						<a href="#">http://sd.ds/1389kjklf#</a>quo nulla.</span></li>
-					<li><label class="fa fa-twitter" aria-hidden="true"></label><i>02 day ago</i><span>Con numquam <a href="#">http://fd.uf/56hfg#</a>
-						eius modi tempora incidunt ut labore et
-						<a href="#">http://fd.uf/56hfg#</a>quo nulla.</span></li>
-				</ul>
-			</div>
 			<div class="clearfix"> </div>
 			<div class="agile_footer_grids">
 				<div class="col-md-3 w3_footer_grid agile_footer_grids_w3_footer">
 					<div class="w3_footer_grid_bottom">
-						<h4>100% secure payments</h4>
+						<h4>100% secure and safe payments</h4>
 						<img src="images/card.png" alt=" " class="img-responsive" />
 					</div>
 				</div>
 				<div class="col-md-3 w3_footer_grid agile_footer_grids_w3_footer">
 					<div class="w3_footer_grid_bottom">
-						<h5>connect with us</h5>
+						<h5>Connect with us</h5>
 						<ul class="agileits_social_icons">
-							<li><a href="#" class="facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-							<li><a href="#" class="twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-							<li><a href="#" class="google"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-							<li><a href="#" class="instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-							<li><a href="#" class="dribbble"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
+							<li><a href="facebook.com/jordandivyansh" class="facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+							<li><a href="twitter.com/jordandivyansh" class="twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+							<li><a href="instagram.com/jordandivyansh" class="instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
 			<div class="wthree_footer_copy">
-				<p>© 2016 Grocery Store. All rights reserved | Design by <a href="http://w3layouts.com/">W3layouts</a></p>
+				<p>© Savdhaan Lobby 2.0 Store. All rights reserved | Design by <a href="www.divyansh.live">Jordan</a></p>
+				<p>
+					Made by Amit Singh | Ankit Kumar | Ayush Katiyar | Prashant Dwivedi with ❤
+				</p>
 			</div>
 		</div>
 	</div>
