--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <!-- font-awesome icons -->
 <link href="css/font-awesome.css" rel="stylesheet" type="text/css" media="all" /> 
 <!-- //font-awesome icons -->
+<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 <!-- js -->
 <script src="js/jquery-1.11.1.min.js"></script>
 <!-- //js -->
@@ -473,22 +474,7 @@
 		</div>
 	</div>
 <!-- //fresh-vegetables -->
-<!-- newsletter -->
-	<div class="newsletter">
-		<div class="container">
-			<div class="w3agile_newsletter_left">
-				<h3>sign up for our newsletter</h3>
-			</div>
-			<div class="w3agile_newsletter_right">
-				<form action="#" method="post">
-					<input type="email" name="Email" value="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}" required="">
-					<input type="submit" value="subscribe now">
-				</form>
-			</div>
-			<div class="clearfix"> </div>
-		</div>
-	</div>
-<!-- //newsletter -->
+
 <!-- footer -->
 	<div class="footer">
 		<div class="container">
@@ -522,16 +508,16 @@
 					<div class="w3_footer_grid_bottom">
 						<h5>Connect with us</h5>
 						<ul class="agileits_social_icons">
-							<li><a href="facebook.com/jordandivyansh" class="facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-							<li><a href="twitter.com/jordandivyansh" class="twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-							<li><a href="instagram.com/jordandivyansh" class="instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+							<li><a href="https://www.facebook.com/jordandivyansh" class="facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+							<li><a href="https://www.twitter.com/jordandivyansh" class="twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+							<li><a href="https://www.instagram.com/jordandivyansh" class="instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
 			<div class="wthree_footer_copy">
-				<p>© Savdhaan Lobby 2.0 Store. All rights reserved | Design by <a href="www.divyansh.live">Jordan</a></p>
+				<p>© Savdhaan Lobby 2.0 Store. All rights reserved | Design by <a href="https://www.divyansh.live">Jordan</a></p>
 				<p>
 					Made by Amit Singh | Ankit Kumar | Ayush Katiyar | Prashant Dwivedi with ❤
 				</p>
