--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 					<li><a href="services.html">Services</a></li>
 				</ul>
 			</div>
-			<img src="images/logo.png" width="80px" height="80px" style="float: left; margin: 20px 20px 20px 20px;">
+			<img src="images/logo.png" width="100px" height="100px" style="float: left; margin: 20px 20px 20px 20px; padding: 10px 10px 10px 10px; display: block;">
 			<div class="w3ls_logo_products_left1">
 				<ul class="phone_email">
 					<li><i class="fa fa-phone" aria-hidden="true"></i><strong><a href="tel:9548211306">Call us</a></strong></li>
