updating about and team

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html>
 <head>
-<title>Grocery Store a Ecommerce Online Shopping Category Flat Bootstrap Responsive Website Template | About Us :: w3layouts</title>
+<title>Savdhaan Grocery | About Us :: w3layouts</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -18,6 +18,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- //for-mobile-apps -->
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 <!-- font-awesome icons -->
 <link href="css/font-awesome.css" rel="stylesheet" type="text/css" media="all" /> 
 <!-- //font-awesome icons -->
@@ -43,16 +44,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <body>
 <!-- header -->
 	<div class="agileits_header">
-		<div class="w3l_offers">
-			<a href="products.html">Today's special Offers !</a>
-		</div>
-		<div class="w3l_search">
-			<form action="#" method="post">
-				<input type="text" name="Product" value="Search a product..." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Search a product...';}" required="">
-				<input type="submit" value=" ">
-			</form>
-		</div>
-		<div class="product_list_header">  
+				<div class="product_list_header" >  
 			<form action="#" method="post" class="last">
                 <fieldset>
                     <input type="hidden" name="cmd" value="_cart" />
@@ -64,21 +56,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="w3l_header_right">
 			<ul>
 				<li class="dropdown profile_details_drop">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user" aria-hidden="true"></i><span class="caret"></span></a>
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user" aria-hidden="true"></i><span class="caret">SHAMBHAVI</span></a>
 					<div class="mega-dropdown-menu">
 						<div class="w3ls_vegetables">
 							<ul class="dropdown-menu drp-mnu">
-								<li><a href="login.html">Login</a></li> 
-								<li><a href="login.html">Sign Up</a></li>
+								<li><a href="login.html">Already with us then Sign In</a></li> 
+								<li><a href="login.html">Come Join us</a></li>
 							</ul>
 						</div>                  
 					</div>	
 				</li>
 			</ul>
 		</div>
-		<div class="w3l_header_right1">
-			<h2><a href="mail.html">Contact Us</a></h2>
-		</div>
+		
 		<div class="clearfix"> </div>
 	</div>
 <!-- script-for sticky-nav -->
@@ -97,23 +87,24 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	});
 	</script>
 <!-- //script-for sticky-nav -->
-	<div class="logo_products">
+		<div class="logo_products">
 		<div class="container">
 			<div class="w3ls_logo_products_left">
-				<h1><a href="index.html"><span>Grocery</span> Store</a></h1>
+				<h1><a href="index.html"><span>Savdhaan</span> Store</a></h1>
 			</div>
 			<div class="w3ls_logo_products_left1">
 				<ul class="special_items">
-					<li><a href="events.html">Events</a><i>/</i></li>
 					<li><a href="about.html">About Us</a><i>/</i></li>
 					<li><a href="products.html">Best Deals</a><i>/</i></li>
 					<li><a href="services.html">Services</a></li>
 				</ul>
 			</div>
+			<img src="images/logo.png" width="100px" height="100px" style="float: left; margin: 20px 20px 20px 20px; padding: 10px 10px 10px 10px; display: block;">
 			<div class="w3ls_logo_products_left1">
 				<ul class="phone_email">
-					<li><i class="fa fa-phone" aria-hidden="true"></i>(+0123) 234 567</li>
-					<li><i class="fa fa-envelope-o" aria-hidden="true"></i><a href="mailto:store@grocery.com">store@grocery.com</a></li>
+					<li><i class="fa fa-phone" aria-hidden="true"></i><strong><a href="tel:9548211306">Call us</a></strong></li>
+					<li><i class="fa fa-envelope-o" aria-hidden="true"></i><a href="mailto:jordan@savdhaan.com"><strong>Ping Us</strong></a></li>
+					<li></li>
 				</ul>
 			</div>
 			<div class="clearfix"> </div>
@@ -193,23 +184,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- about -->
 		<div class="privacy about">
 			<h3>About Us</h3>
-			<p class="animi">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis 
-				praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias 
-				excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui 
-				officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem 
-				rerum facilis est et expedita distinctio.</p>
+			<p class="animi">Started with a group of 5 people living together in a lobby with a idea to sell daily use essentails and grocery items with cool discount offers.<p>Now providing all the household items, food, drinks,etc. round the clock.</p></p>
 			<div class="agile_about_grids">
 				<div class="col-md-6 agile_about_grid_right">
 					<img src="images/31.jpg" alt=" " class="img-responsive" />
 				</div>
 				<div class="col-md-6 agile_about_grid_left">
 					<ol>
-						<li>laborum et dolorum fuga</li>
-						<li>corrupti quos dolores et quas</li>
-						<li>est et expedita distinctio</li>
-						<li>deleniti atque corrupti quos</li>
-						<li>excepturi sint occaecati cupiditate</li>
-						<li>accusamus et iusto odio</li>
+						<li>Low Prices as decided by savdhaan team</li>
+						<li>Huge Discounts</li>
+						<li>Safe Payments</li>
+						<li>Fresh and healthy products</li>
+						<li>24*7 Customer Support</li>
+						<li>Easy Return and Refund Policies</li>
 					</ol>
 				</div>
 				<div class="clearfix"> </div>
@@ -227,40 +214,40 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="agileits_team_grids">
 				<div class="col-md-3 agileits_team_grid">
 					<img src="images/32.jpg" alt=" " class="img-responsive" />
-					<h4>Martin Paul</h4>
-					<p>Manager</p>
+					<h4>Amit Singh</h4>
+					<p>Product and Strategy Leader</p>
 					<ul class="agileits_social_icons agileits_social_icons_team">
-						<li><a href="#" class="facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+						<li><a href="https://www.facebook.com/profile.php?id=100007586508508" class="facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 						<li><a href="#" class="twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 						<li><a href="#" class="google"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
 					</ul>
 				</div>
 				<div class="col-md-3 agileits_team_grid">
 					<img src="images/33.jpg" alt=" " class="img-responsive" />
-					<h4>Michael Rick</h4>
-					<p>Supervisor</p>
+					<h4>Ankit Kumar</h4>
+					<p>Technical Head</p>
 					<ul class="agileits_social_icons agileits_social_icons_team">
-						<li><a href="#" class="facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+						<li><a href="https://www.facebook.com/theanandankit" class="facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 						<li><a href="#" class="twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 						<li><a href="#" class="google"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
 					</ul>
 				</div>
 				<div class="col-md-3 agileits_team_grid">
 					<img src="images/34.jpg" alt=" " class="img-responsive" />
-					<h4>Thomas Carl</h4>
-					<p>Supervisor</p>
+					<h4>Ayush Katiyar</h4>
+					<p>Logistics Manager</p>
 					<ul class="agileits_social_icons agileits_social_icons_team">
-						<li><a href="#" class="facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+						<li><a href="https://www.facebook.com/ayush.katiyar.520" class="facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 						<li><a href="#" class="twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 						<li><a href="#" class="google"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
 					</ul>
 				</div>
 				<div class="col-md-3 agileits_team_grid">
 					<img src="images/35.jpg" alt=" " class="img-responsive" />
-					<h4>Laura Lee</h4>
-					<p>CEO</p>
+					<h4>Prashant Dwivedi</h4>
+					<p>Dispute Handler</p>
 					<ul class="agileits_social_icons agileits_social_icons_team">
-						<li><a href="#" class="facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+						<li><a href="https://www.facebook.com/prashant.dwivedi.31542" class="facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 						<li><a href="#" class="twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 						<li><a href="#" class="google"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
 					</ul>
@@ -280,16 +267,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<article style="position: absolute; width: 100%; opacity: 0;"> 
 								<div class="banner-wrap">
 									<div class="col-md-6 w3_testimonials_grid">
-										<p><i class="fa fa-quote-right" aria-hidden="true"></i>Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis 
-											voluptatibus maiores alias consequatur aut perferendis doloribus asperiores 
-											repellat.</p>
-										<h4>Andrew Smith <span>Customer</span></h4>
+										<p><i class="fa fa-quote-right" aria-hidden="true"></i>Products delivered are fresh and healthy also having a large variety that too on huge discounts</p>
+										<h4>Kamal Garg <span>Customer</span></h4>
 									</div>
 									<div class="col-md-6 w3_testimonials_grid">
-										<p><i class="fa fa-quote-right" aria-hidden="true"></i>Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis 
-											voluptatibus maiores alias consequatur aut perferendis doloribus asperiores 
-											repellat.</p>
-										<h4>Thomson Richard <span>Customer</span></h4>
+										<p><i class="fa fa-quote-right" aria-hidden="true"></i>They have very good Customer service and amazing return and refund policy</p>
+										<h4>Shivam Bhasker<span>Customer</span></h4>
 									</div>
 									<div class="clearfix"> </div>
 								</div>
@@ -297,16 +280,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<article style="position: absolute; width: 100%; opacity: 0;"> 
 								<div class="banner-wrap">
 									<div class="col-md-6 w3_testimonials_grid">
-										<p><i class="fa fa-quote-right" aria-hidden="true"></i>Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis 
-											voluptatibus maiores alias consequatur aut perferendis doloribus asperiores 
-											repellat.</p>
-										<h4>Crisp Kale <span>Customer</span></h4>
+										<p><i class="fa fa-quote-right" aria-hidden="true"></i>Items are delivered in very short duration of time that too safely and securely.</p>
+										<h4>Aayush Singh <span>Customer</span></h4>
 									</div>
 									<div class="col-md-6 w3_testimonials_grid">
-										<p><i class="fa fa-quote-right" aria-hidden="true"></i>Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis 
-											voluptatibus maiores alias consequatur aut perferendis doloribus asperiores 
-											repellat.</p>
-										<h4>John Paul <span>Customer</span></h4>
+										<p><i class="fa fa-quote-right" aria-hidden="true"></i>They have very good payment methods</p>
+										<h4>Vishnu Kumar <span>Customer</span></h4>
 									</div>
 									<div class="clearfix"> </div>
 								</div>
@@ -314,16 +293,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<article style="position: absolute; width: 100%; opacity: 0;"> 
 								<div class="banner-wrap">
 									<div class="col-md-6 w3_testimonials_grid">
-										<p><i class="fa fa-quote-right" aria-hidden="true"></i>Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis 
-											voluptatibus maiores alias consequatur aut perferendis doloribus asperiores 
-											repellat.</p>
-										<h4>Rosy Carl <span>Customer</span></h4>
+										<p><i class="fa fa-quote-right" aria-hidden="true"></i>Really love the way they have products listed over the website, falling in love with Web Designer</p>
+										<h4>S.S. <span>Prime-Customer</span></h4>
 									</div>
 									<div class="col-md-6 w3_testimonials_grid">
-										<p><i class="fa fa-quote-right" aria-hidden="true"></i>Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis 
-											voluptatibus maiores alias consequatur aut perferendis doloribus asperiores 
-											repellat.</p>
-										<h4>Rockson Doe <span>Customer</span></h4>
+										<p><i class="fa fa-quote-right" aria-hidden="true"></i>Savdhaan Team is changing the way of Modern Shopping</p>
+										<h4>Sakshi Kumar<span>Customer</span></h4>
 									</div>
 									<div class="clearfix"> </div>
 								</div>
@@ -338,45 +313,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 	</div>
 <!-- //testimonials -->
-<!-- newsletter -->
-	<div class="newsletter">
-		<div class="container">
-			<div class="w3agile_newsletter_left">
-				<h3>sign up for our newsletter</h3>
-			</div>
-			<div class="w3agile_newsletter_right">
-				<form action="#" method="post">
-					<input type="email" name="Email" value="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}" required="">
-					<input type="submit" value="subscribe now">
-				</form>
-			</div>
-			<div class="clearfix"> </div>
-		</div>
-	</div>
-<!-- //newsletter -->
 <!-- footer -->
 	<div class="footer">
 		<div class="container">
 			<div class="col-md-3 w3_footer_grid">
-				<h3>information</h3>
+				<h3>Information</h3>
 				<ul class="w3_footer_grid_list">
-					<li><a href="events.html">Events</a></li>
 					<li><a href="about.html">About Us</a></li>
 					<li><a href="products.html">Best Deals</a></li>
 					<li><a href="services.html">Services</a></li>
-					<li><a href="short-codes.html">Short Codes</a></li>
 				</ul>
 			</div>
 			<div class="col-md-3 w3_footer_grid">
-				<h3>policy info</h3>
-				<ul class="w3_footer_grid_list">
-					<li><a href="faqs.html">FAQ</a></li>
-					<li><a href="privacy.html">privacy policy</a></li>
-					<li><a href="privacy.html">terms of use</a></li>
-				</ul>
-			</div>
-			<div class="col-md-3 w3_footer_grid">
-				<h3>what in stores</h3>
+				<h3>Savdhaan is fulfilled</h3>
 				<ul class="w3_footer_grid_list">
 					<li><a href="pet.html">Pet Food</a></li>
 					<li><a href="frozen.html">Frozen Snacks</a></li>
@@ -385,41 +334,31 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<li><a href="household.html">Households</a></li>
 				</ul>
 			</div>
-			<div class="col-md-3 w3_footer_grid">
-				<h3>twitter posts</h3>
-				<ul class="w3_footer_grid_list1">
-					<li><label class="fa fa-twitter" aria-hidden="true"></label><i>01 day ago</i><span>Non numquam <a href="#">http://sd.ds/13jklf#</a>
-						eius modi tempora incidunt ut labore et
-						<a href="#">http://sd.ds/1389kjklf#</a>quo nulla.</span></li>
-					<li><label class="fa fa-twitter" aria-hidden="true"></label><i>02 day ago</i><span>Con numquam <a href="#">http://fd.uf/56hfg#</a>
-						eius modi tempora incidunt ut labore et
-						<a href="#">http://fd.uf/56hfg#</a>quo nulla.</span></li>
-				</ul>
-			</div>
 			<div class="clearfix"> </div>
 			<div class="agile_footer_grids">
 				<div class="col-md-3 w3_footer_grid agile_footer_grids_w3_footer">
 					<div class="w3_footer_grid_bottom">
-						<h4>100% secure payments</h4>
+						<h4>100% secure and safe payments</h4>
 						<img src="images/card.png" alt=" " class="img-responsive" />
 					</div>
 				</div>
 				<div class="col-md-3 w3_footer_grid agile_footer_grids_w3_footer">
 					<div class="w3_footer_grid_bottom">
-						<h5>connect with us</h5>
+						<h5>Connect with us</h5>
 						<ul class="agileits_social_icons">
-							<li><a href="#" class="facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-							<li><a href="#" class="twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-							<li><a href="#" class="google"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-							<li><a href="#" class="instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-							<li><a href="#" class="dribbble"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
+							<li><a href="https://www.facebook.com/jordandivyansh" class="facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+							<li><a href="https://www.twitter.com/jordandivyansh" class="twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+							<li><a href="https://www.instagram.com/jordandivyansh" class="instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
 			<div class="wthree_footer_copy">
-				<p>© 2016 Grocery Store. All rights reserved | Design by <a href="http://w3layouts.com/">W3layouts</a></p>
+				<p>© Savdhaan Lobby 2.0 Store. All rights reserved | Design by <a href="https://www.divyansh.live">Jordan</a></p>
+				<p>
+					Made by Amit Singh | Ankit Kumar | Ayush Katiyar | Prashant Dwivedi with ❤
+				</p>
 			</div>
 		</div>
 	</div>
