--- a/about.html
+++ b/about.html
@@ -252,6 +252,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li><a href="#" class="google"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
 					</ul>
 				</div>
+				<p  style="text-align: center;"><strong style="color:#ff0000; ">Come Join our Team:</strong><span style="color:#84c639;"> Visit our office(167/8, BH-1, IIIT Gwalior) and we will have your interview.</span> 
 				<div class="clearfix"> </div>
 			</div>
 		</div>
