--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
 					<li><i class="fa fa-phone" aria-hidden="true"></i><strong><a href="tel:9548211306">Call us</a></strong></li>
 					<li><i class="fa fa-envelope-o" aria-hidden="true"></i><a href="mailto:jordan@savdhaan.com"><strong>Ping Us</strong></a></li>
 					<li></li>
+					<li><i aria-hidden="true"></i><a href="mail.html"><strong>Reach Us</strong></a></li>
+					<li></li>
+
 				</ul>
 			</div>
 			<div class="clearfix"> </div>
