--- a/mail.html
+++ b/mail.html
@@ -2,7 +2,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-<<<<<<< HEAD
 <title>Savdhaan Grocery | Reach Us</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,6 +15,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <!-- font-awesome icons -->
 <link href="css/font-awesome.css" rel="stylesheet" type="text/css" media="all" /> 
+	<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+
 <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 <!-- //font-awesome icons -->
 <!-- js -->
