--- a/login.html
+++ b/login.html
@@ -1,25 +1,17 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-<title>Savdhaan Grocery | Login</title>
-<!-- for-mobile-apps -->
+<title>Grocery Store a Ecommerce Online Shopping Category Flat Bootstrap Responsive Website Template</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Grocery Store Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
 		function hideURLbar(){ window.scrollTo(0,1); } </script>
-<!-- //for-mobile-apps -->
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
-<!-- font-awesome icons -->
 <link href="css/font-awesome.css" rel="stylesheet" type="text/css" media="all" /> 
-<!-- //font-awesome icons -->
-<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-<!-- js -->
 <script src="js/jquery-1.11.1.min.js"></script>
-<!-- //js -->
 <link href='//fonts.googleapis.com/css?family=Ubuntu:400,300,300italic,400italic,500,500italic,700,700italic' rel='stylesheet' type='text/css'>
 <link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
 <!-- start-smoth-scrolling -->
@@ -33,40 +25,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		});
 	});
 </script>
-<!-- start-smoth-scrolling -->
 </head>
-	
 <body>
-<!-- header -->
-	<div class="agileits_header">
-				<div class="product_list_header" >  
-			<form action="#" method="post" class="last">
-                <fieldset>
-                    <input type="hidden" name="cmd" value="_cart" />
-                    <input type="hidden" name="display" value="1" />
-                    <input type="submit" name="submit" value="View your cart" class="button" />
-                </fieldset>
-            </form>
-		</div>
-		<div class="w3l_header_right">
-			<ul>
-				<li class="dropdown profile_details_drop">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user" aria-hidden="true"></i><span class="caret">SHAMBHAVI</span></a>
-					<div class="mega-dropdown-menu">
-						<div class="w3ls_vegetables">
-							<ul class="dropdown-menu drp-mnu">
-								<li><a href="login.html">Already with us then Sign In</a></li> 
-								<li><a href="login.html">Come Join us</a></li>
-							</ul>
-						</div>                  
-					</div>	
-				</li>
-			</ul>
-		</div>
-		
-		<div class="clearfix"> </div>
-	</div>
-<!-- script-for sticky-nav -->
 	<script>
 	$(document).ready(function() {
 		 var navoffeset=$(".agileits_header").offset().top;
@@ -81,32 +41,27 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		 
 	});
 	</script>
-<!-- //script-for sticky-nav -->
 	<div class="logo_products">
 		<div class="container">
 			<div class="w3ls_logo_products_left">
-				<h1><a href="index.html"><span>Savdhaan</span> Store</a></h1>
+				<h1><a href="index.html"><span>Savdhan</span> Store</a></h1>
 			</div>
 			<div class="w3ls_logo_products_left1">
 				<ul class="special_items">
+					<li><a href="events.html">Events</a><i>/</i></li>
 					<li><a href="about.html">About Us</a><i>/</i></li>
 					<li><a href="products.html">Best Deals</a><i>/</i></li>
-					<li><a href="services.html">Services</a></li>
 				</ul>
 			</div>
-			<img src="images/logo.png" width="100px" height="100px" style="float: left; margin: 20px 20px 20px 20px; padding: 10px 10px 10px 10px; display: block;">
 			<div class="w3ls_logo_products_left1">
 				<ul class="phone_email">
-					<li><i class="fa fa-phone" aria-hidden="true"></i><strong><a href="tel:9548211306">Call us</a></strong></li>
-					<li><i class="fa fa-envelope-o" aria-hidden="true"></i><a href="mailto:jordan@savdhaan.com"><strong>Ping Us</strong></a></li>
-					<li></li>
+					<li><i class="fa fa-phone" aria-hidden="true">9024923695</i></li>
+					<li><i class="fa fa-envelope-o" aria-hidden="true"></i><a href="mailto:store@grocery.com">mail@savdhan.com</a></li>
 				</ul>
 			</div>
 			<div class="clearfix"> </div>
 		</div>
 	</div>
-<!-- //header -->
-<!-- products-breadcrumb -->
 	<div class="products-breadcrumb">
 		<div class="container">
 			<ul>
@@ -115,67 +70,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</ul>
 		</div>
 	</div>
-<!-- //products-breadcrumb -->
-<!-- banner -->
-	<div class="banner">
-		<div class="w3l_banner_nav_left">
-		<nav class="navbar nav_bottom">
-			 <!-- Brand and toggle get grouped for better mobile display -->
-			  <div class="navbar-header nav_2">
-				  <button type="button" class="navbar-toggle collapsed navbar-toggle1" data-toggle="collapse" data-target="#bs-megadropdown-tabs">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				  </button>
-			   </div> 
-			   <!-- Collect the nav links, forms, and other content for toggling -->
-				<div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
-					<ul class="nav navbar-nav nav_1">
-						<li><a href="products.html">Branded Foods</a></li>
-						<li><a href="household.html">Households</a></li>
-						<li class="dropdown mega-dropdown active">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Veggies & Fruits<span class="caret"></span></a>				
-							<div class="dropdown-menu mega-dropdown-menu w3ls_vegetables_menu">
-								<div class="w3ls_vegetables">
-									<ul>	
-										<li><a href="vegetables.html">Vegetables</a></li>
-										<li><a href="vegetables.html">Fruits</a></li>
-									</ul>
-								</div>                  
-							</div>				
-						</li>
-						<li><a href="kitchen.html">Kitchen</a></li>
-						<li><a href="short-codes.html">Short Codes</a></li>
-						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Beverages<span class="caret"></span></a>
-							<div class="dropdown-menu mega-dropdown-menu w3ls_vegetables_menu">
-								<div class="w3ls_vegetables">
-									<ul>
-										<li><a href="drinks.html">Soft Drinks</a></li>
-										<li><a href="drinks.html">Juices</a></li>
-									</ul>
-								</div>                  
-							</div>	
-						</li>
-						<li><a href="pet.html">Pet Food</a></li>
-						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Frozen Foods<span class="caret"></span></a>
-							<div class="dropdown-menu mega-dropdown-menu w3ls_vegetables_menu">
-								<div class="w3ls_vegetables">
-									<ul>
-										<li><a href="frozen.html">Frozen Snacks</a></li>
-										<li><a href="frozen.html">Frozen Nonveg</a></li>
-									</ul>
-								</div>                  
-							</div>	
-						</li>
-						<li><a href="bread.html">Bread & Bakery</a></li>
-					</ul>
-				 </div><!-- /.navbar-collapse -->
-			</nav>
-		</div>
-		<div class="w3l_banner_nav_right">
 <!-- login -->
 		<div class="w3_login">
 			<h3>Sign In & Sign Up</h3>
@@ -187,9 +81,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				  <div class="form">
 					<h2>Login to your account</h2>
 					<form action="#" method="post">
-					  <input type="text" name="Username" placeholder="Username" required=" ">
-					  <input type="password" name="Password" placeholder="Password" required=" ">
-					  <input type="submit" value="Login">
+					  <input id='login_user' type="text" name="Username" placeholder="Username" required=" ">
+					  <input id='login_password' type="password" name="Password" placeholder="Password" required=" ">
+					  <input type="submit" value="Login" id="login_button">
 					</form>
 				  </div>
 				  <div class="form">
@@ -199,7 +93,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					  <input type="password" name="Password" placeholder="Password" required=" ">
 					  <input type="email" name="Email" placeholder="Email Address" required=" ">
 					  <input type="text" name="Phone" placeholder="Phone Number" required=" ">
-					  <input type="submit" value="Register">
+					  <input type="submit" value="Register" id="register_button">
 					</form>
 				  </div>
 				  <div class="cta"><a href="#">Forgot your password?</a></div>
@@ -219,24 +113,26 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				});
 			</script>
 		</div>
-<!-- //login -->
-		</div>
-		<div class="clearfix"></div>
-	</div>
-<!-- //banner -->
-<!-- footer -->
 	<div class="footer">
 		<div class="container">
 			<div class="col-md-3 w3_footer_grid">
-				<h3>Information</h3>
+				<h3>information</h3>
 				<ul class="w3_footer_grid_list">
+					<li><a href="events.html">Events</a></li>
 					<li><a href="about.html">About Us</a></li>
 					<li><a href="products.html">Best Deals</a></li>
-					<li><a href="services.html">Services</a></li>
 				</ul>
 			</div>
 			<div class="col-md-3 w3_footer_grid">
-				<h3>Savdhaan is fulfilled</h3>
+				<h3>policy info</h3>
+				<ul class="w3_footer_grid_list">
+					<li><a href="faqs.html">FAQ</a></li>
+					<li><a href="privacy.html">privacy policy</a></li>
+					<li><a href="privacy.html">terms of use</a></li>
+				</ul>
+			</div>
+			<div class="col-md-3 w3_footer_grid">
+				<h3>what in stores</h3>
 				<ul class="w3_footer_grid_list">
 					<li><a href="pet.html">Pet Food</a></li>
 					<li><a href="frozen.html">Frozen Snacks</a></li>
@@ -249,32 +145,32 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="agile_footer_grids">
 				<div class="col-md-3 w3_footer_grid agile_footer_grids_w3_footer">
 					<div class="w3_footer_grid_bottom">
-						<h4>100% secure and safe payments</h4>
+						<h4>100% secure payments</h4>
 						<img src="images/card.png" alt=" " class="img-responsive" />
 					</div>
 				</div>
 				<div class="col-md-3 w3_footer_grid agile_footer_grids_w3_footer">
 					<div class="w3_footer_grid_bottom">
-						<h5>Connect with us</h5>
+						<h5>connect with us</h5>
 						<ul class="agileits_social_icons">
-							<li><a href="https://www.facebook.com/jordandivyansh" class="facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-							<li><a href="https://www.twitter.com/jordandivyansh" class="twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-							<li><a href="https://www.instagram.com/jordandivyansh" class="instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+							<li><a href="#" class="facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+							<li><a href="#" class="twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+							<li><a href="#" class="google"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+							<li><a href="#" class="instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+							<li><a href="#" class="dribbble"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
 			<div class="wthree_footer_copy">
-				<p>© Savdhaan Lobby 2.0 Store. All rights reserved | Design by <a href="https://www.divyansh.live">Jordan</a></p>
+				<p>© Savdhaan Lobby 2.0 Store. All rights reserved</p>
 				<p>
-					Made by Amit Singh | Ankit Kumar | Ayush Katiyar | Prashant Dwivedi with ❤
+					Made by Amit Singh | Ankit Kumar | Ayush Katiyar | Prashant Dwivedi
 				</p>
 			</div>
 		</div>
 	</div>
-<!-- //footer -->
-<!-- Bootstrap Core JavaScript -->
 <script src="js/bootstrap.min.js"></script>
 <script>
 $(document).ready(function(){
@@ -290,23 +186,98 @@ $(document).ready(function(){
     );
 });
 </script>
-<!-- here stars scrolling icon -->
+<script src="https://www.gstatic.com/firebasejs/7.14.6/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.14.6/firebase-analytics.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.14.0/firebase-auth.js"></script>
+<script>
+  var firebaseConfig = {
+    apiKey: "AIzaSyApUIgNPDS2C0e-W1pEgQ1axp6QPvAOjNs",
+    authDomain: "savdhann-e5b45.firebaseapp.com",
+    databaseURL: "https://savdhann-e5b45.firebaseio.com",
+    projectId: "savdhann-e5b45",
+    storageBucket: "savdhann-e5b45.appspot.com",
+    messagingSenderId: "650050911295",
+    appId: "1:650050911295:web:e59bae19d7ab91a6874c8a",
+    measurementId: "G-2HTC87T8EP"
+  };
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+
+//   firebase.auth().signOut().then(function() {
+
+
+// }).catch(function(error) {
+// });
+  
+	 var lo=document.getElementById('login_button')
+
+	 var rl=document.getElementById('register_button')
+
+	 firebase.auth().onAuthStateChanged(function(user) {
+        if (user) {
+          window.alert("you are successfully logged in")
+		  var user = firebase.auth().currentUser;
+		  var email;
+		  window.open("index.html","_self");
+          email = user.email;
+	      console.log(email);
+	      window.sessionStorage
+	      sessionStorage.setItem("email",email);
+	      var value = sessionStorage.getItem("email");
+	      console.log(value);
+        } else {
+			window.alert("please check the email or password")
+        }
+      });
+
+
+	  lo.addEventListener('click',function()
+        {
+
+	 	console.log('kkkkkkk');
+	// 	var login_u=document.getElementById("login_user").value;
+	// 	var login_p=document.getElementById("login_password").value;
+
+	// 	console.log(login_u);
+	// 	console.log(login_p);
+
+	// 	firebase.auth().signInWithEmailAndPassword(login_u,login_p).catch(function(error) {
+	// 	console.log('sucessful')
+    //     var errorCode = error.code;
+    //     var errorMessage = error.message;
+    //     window.alert("Error: "+errorMessage)
+    //   });
+
+	    })
+
+	 rl.addEventListener('click',function(){
+
+		firebase.auth().createUserWithEmailAndPassword('alokanand499@gmail.com','asdfghjkl').catch(function(error) {
+
+          var errorCode = error.code;
+          var errorMessage = error.message;
+		  window.alert("Error: "+errorMessage)
+
+      });
+
+	  var user = firebase.auth().currentUser;
+      var email;
+
+      if (user != null) 
+	  {
+      email = user.email;
+	  console.log(email);
+	  }
+
+	 })
+</script>
+
 	<script type="text/javascript">
-		$(document).ready(function() {
-			/*
-				var defaults = {
-				containerID: 'toTop', // fading element id
-				containerHoverID: 'toTopHover', // fading element hover id
-				scrollSpeed: 1200,
-				easingType: 'linear' 
-				};
-			*/
-								
+		$(document).ready(function() {				
 			$().UItoTop({ easingType: 'easeOutQuart' });
 								
 			});
 	</script>
-<!-- //here ends scrolling icon -->
 <script src="js/minicart.js"></script>
 <script>
 		paypal.minicart.render();
@@ -316,8 +287,6 @@ $(document).ready(function(){
 				len = items.length,
 				total = 0,
 				i;
-
-			// Count the number of each item in the cart
 			for (i = 0; i < len; i++) {
 				total += items[i].get('quantity');
 			}
@@ -327,7 +296,6 @@ $(document).ready(function(){
 				evt.preventDefault();
 			}
 		});
-
 	</script>
 </body>
 </html>
