--- a/about.html
+++ b/about.html
@@ -288,8 +288,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<article style="position: absolute; width: 100%; opacity: 0;"> 
 								<div class="banner-wrap">
 									<div class="col-md-6 w3_testimonials_grid">
-										<p><i class="fa fa-quote-right" aria-hidden="true"></i>Really love the way they have products listed over the website, falling in love with Web Designer</p>
-										<h4>S.S. <span>Prime-Customer</span></h4>
+										<p><i class="fa fa-quote-right" aria-hidden="true"></i>Providing excellent services in the time of Covid.</p>
+										<h4>S.S. <span>Customer</span></h4>
 									</div>
 									<div class="col-md-6 w3_testimonials_grid">
 										<p><i class="fa fa-quote-right" aria-hidden="true"></i>Savdhaan Team is changing the way of Modern Shopping</p>
