--- a/about.html
+++ b/about.html
@@ -289,7 +289,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<div class="banner-wrap">
 									<div class="col-md-6 w3_testimonials_grid">
 										<p><i class="fa fa-quote-right" aria-hidden="true"></i>Providing excellent services in the time of Covid.</p>
-										<h4>S.S. <span>Customer</span></h4>
+										<h4>Stephen <span>Customer</span></h4>
 									</div>
 									<div class="col-md-6 w3_testimonials_grid">
 										<p><i class="fa fa-quote-right" aria-hidden="true"></i>Savdhaan Team is changing the way of Modern Shopping</p>
